--- a/tests/FSharpPlus.Suave.Tests/FSharpPlus.Suave.Tests.fsproj
+++ b/tests/FSharpPlus.Suave.Tests/FSharpPlus.Suave.Tests.fsproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFrameworks>netcoreapp2.0;net461</TargetFrameworks>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
