--- a/src/FSharpPlus.Suave/FSharpPlus.Suave.fsproj
+++ b/src/FSharpPlus.Suave/FSharpPlus.Suave.fsproj
@@ -22,7 +22,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Library.fs" />
+    <Compile Include="FSharpPlusSuave.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
