--- a/tests/FSharpPlus.Suave.Tests/FSharpPlus.Suave.Tests.fsproj
+++ b/tests/FSharpPlus.Suave.Tests/FSharpPlus.Suave.Tests.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="SuaveTest.fs" />
     <Compile Include="Tests.fs" />
     <Compile Include="NewtonsoftJson.fs" />
+    <Compile Include="NewtonsoftJsonTests.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
   <ItemGroup>
