Adding some basic lenses (#7)

--- a/tests/FSharpPlus.Suave.Tests/FSharpPlus.Suave.Tests.fsproj
+++ b/tests/FSharpPlus.Suave.Tests/FSharpPlus.Suave.Tests.fsproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="SuaveTest.fs" />
     <Compile Include="Tests.fs" />
+    <Compile Include="NewtonsoftJson.fs" />
+    <Compile Include="NewtonsoftJsonTests.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
   <ItemGroup>
